Update skin valentines

--- a/www/static/skins/valentines-day.html
+++ b/www/static/skins/valentines-day.html
@@ -116,8 +116,8 @@
         <div class="container" style="position: fixed; top: 0; left: calc(50vw - 160px);">
             <div class="skins">
                 <h1>Thank you!</h1>
-                <p>I love you my darling. You wife Gretta. I love you my darling. You wife Gretta. I love you my darling. You wife Grettaa.</p>
-                <button class="btn">Grab present</button>
+                <p id="message"></p>
+                <button class="btn" onclick="parent.hideSkin();">Grab present</button>
             </div>
          </div>
          <div class="fon-wrap">
