--- a/www/static/skins/womens-day.html
+++ b/www/static/skins/womens-day.html
@@ -54,6 +54,7 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+            background: #fff;
         }
         .container {
             max-width: 320px;
@@ -332,8 +333,8 @@
 			<path id="stem2--top" d="M130.8 198.8l22.3 83.5"/>
 			<path id="stem2--bottom" d="M181.2 394.7l73 288.7"/>
 		  </g>
-		  <path id="stem1" fill="none" stroke="#82C384" stroke-width="3" stroke-miterlimit="10" d="M252.2 738.3L149.8 413.7" stroke-linecap="round"/> 
-		  
+		  <path id="stem1" fill="none" stroke="#82C384" stroke-width="3" stroke-miterlimit="10" d="M252.2 738.3L149.8 413.7" stroke-linecap="round"/>
+
 		  <g id="flower6" fill="none" stroke="#f425c3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round">
 			<path d="M380 363.5c-4 17.4-25 62.1-37.6 59.2-12.6-2.9-12.1-52.3-8.1-69.7s17.4-29.1 30-26.2 19.6 19.3 15.7 36.7z"/>
 			<path d="M325.4 354.1c8.1 15.9 20.8 63.6 9.3 69.5-11.5 5.9-42.9-32.3-51-48.2-8.1-15.9-5.4-33.5 6.2-39.4 11.4-5.9 27.4 2.2 35.5 18.1z"/>
