--- a/www/static/skins/star-wars-day.html
+++ b/www/static/skins/star-wars-day.html
@@ -2700,7 +2700,7 @@ section {
     <!-- /Skins -->
   <script>
     document.addEventListener('DOMContentLoaded', function(){
-      document.getElementById('message').innerHTML  = parent.skinMessage() ?? '';
+      document.getElementById('message').innerHTML  = parent.skinMessage() || '';
     })
   </script>
 </body>
